methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for (i <-1 to 7){
    avance()
    if(estSurBiscuit()){
      vuBiscuit=true
    }
  }
  return vuBiscuit
}
while(habeBaggle==false){
  droite()
  avance()
  gauche()
}